log
Sun 24 Mar 2024 03:56:15 PM UTC: 
 tests:  0|6
total_score: 0/70
6b3f5c0
Sun 24 Mar 2024 04:16:41 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
648e16a
Sun 24 Mar 2024 05:31:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
272b4be
Sun 24 Mar 2024 05:33:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f36057b
Sun 24 Mar 2024 05:33:54 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
62c1fca
Sun 24 Mar 2024 05:35:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
71bb1af
Sun 24 Mar 2024 05:36:11 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:10: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   46 |   return lista->current;
      |          ^~~~~
      |          list
list.c:46:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e4054e
Sun 24 Mar 2024 05:36:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
559ce12
Sun 24 Mar 2024 05:36:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
651b7c5
Sun 24 Mar 2024 05:37:35 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
bdab7ed
Sun 24 Mar 2024 05:41:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
52342a5
Sun 24 Mar 2024 05:41:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
2c72f3e
Sun 24 Mar 2024 05:42:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ee23b29
Sun 24 Mar 2024 05:43:16 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
e5dd5ca
Sun 24 Mar 2024 05:43:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
67de2da
Sun 24 Mar 2024 05:44:42 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
58c114e
Sun 24 Mar 2024 05:44:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c2ce31e
Sun 24 Mar 2024 05:45:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7787fd0
Sun 24 Mar 2024 05:45:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
549b3bf
Sun 24 Mar 2024 05:46:22 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
da5ef86
Sun 24 Mar 2024 05:47:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c8cc6f4
Sun 24 Mar 2024 05:48:51 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
3d0155a
Sun 24 Mar 2024 06:06:42 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8128e21
Sun 24 Mar 2024 06:07:13 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
6afcbc3
Sun 24 Mar 2024 06:07:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c6f568a
Sun 24 Mar 2024 06:13:45 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:60:11: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   60 |   if(list-current->prev == NULL) return NULL;
      |           ^~~~~~~
      |           popCurrent
list.c:60:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
52bbf26
Sun 24 Mar 2024 06:13:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
aadd4ac
Sun 24 Mar 2024 07:04:40 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
72341b3
Sun 24 Mar 2024 07:05:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
69d2309
Sun 24 Mar 2024 07:09:01 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
f6c4584
Sun 24 Mar 2024 07:09:23 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
03d7624
Sun 24 Mar 2024 07:10:17 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
25ad63f
Sun 24 Mar 2024 07:11:17 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
d2b461f
Sun 24 Mar 2024 07:12:11 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
2bb7492
Sun 24 Mar 2024 07:13:19 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
fbe49ca
Sun 24 Mar 2024 07:13:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e0bbc62
Sun 24 Mar 2024 07:14:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
6072d99
Sun 24 Mar 2024 07:14:51 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
68387f7
Sun 24 Mar 2024 07:15:36 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
ea256e9
Sun 24 Mar 2024 07:16:28 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
6339211
Sun 24 Mar 2024 07:17:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
89543b8
Sun 24 Mar 2024 07:17:55 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5aae1fa
Sun 24 Mar 2024 07:18:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
7b3b66c
Sun 24 Mar 2024 07:25:18 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:85:9: error: unused variable ‘actual’ [-Werror=unused-variable]
   85 |   Node *actual = createNode(data);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b158522
Sun 24 Mar 2024 07:25:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5c12742
Sun 24 Mar 2024 07:26:41 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
7c4f636
Sun 24 Mar 2024 07:29:24 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
9f43e83
Sun 24 Mar 2024 07:30:17 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
96f60c9
Sun 24 Mar 2024 07:33:02 PM UTC: 
 list.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  10|2
total_score: 45/70
b820fde
Sun 24 Mar 2024 07:45:54 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:10: error: assignment to ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   86 |   actual = 2;
      |          ^
list.c:85:9: error: variable ‘actual’ set but not used [-Werror=unused-but-set-variable]
   85 |   Node *actual = createNode(data);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9c0303
